--- a/google-sheet-cms/style.css
+++ b/google-sheet-cms/style.css
@@ -12,6 +12,10 @@ label {
   display: block;
 }
 
+h1 {
+  text-align: center;
+}
+
 .honeypot-field {
   display: none;
 }
@@ -20,10 +24,30 @@ label {
   border: 1px solid black;
 }
 
+ol {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: wrap;
+  gap: 10px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 li {
+  border: 1px solid black;
+  padding: 5px;
   margin-bottom: 1em;
+  background-color: whitesmoke;
 }
 
 .Timestamp {
+  display: none;
+}
+.name {
+  font-weight: bold;
+}
+.color {
   display: none;
 }
