--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body, h1, h2, p, a {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: cursive;
+    background-color: black;
+    color: white;
 }
 
 ul {
@@ -13,76 +16,51 @@ ul {
     padding: 0;
     display: flex;
     text-align: left;
-    gap: 1vw;
+    gap: 2vw;
     justify-content: space-evenly;
     align-items: baseline;
     flex-wrap: wrap;
+    background: linear-gradient(90deg, black 0%, darkred 5%, darkred 95%, black);
+    padding: 40px 0;
 }
 
-/* Body Style */
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
-    color: #333;
-    line-height: 1.6;
-    padding: 20px;
-}
-
-/* Header Styles */
 h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-    color: #2c3e50;
+    font-size: 3em;
+    text-align: center;
+    margin: 15px 0 0 0;
+    padding: 0;
 }
 
 h2 {
-    font-size: 1.8em;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    color: #34495e;
-}
-
-/* Paragraph and Link Styles */
-p {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+    text-align: center;
+    margin: 15px 0 15px 0;
 }
 
 a {
+    font-size: 1.5em;
+    margin-bottom: 10px;
     text-decoration: none;
-    color: #3498db;
-    transition: color 0.3s ease;
+    color: black;
+    background-color: transparent;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
-
 a:hover {
-    color: #1abc9c;
+    transition: all 0.5s ease;
+    color: darkred;
 }
 
-/* Link Containers */
-p a {
-    display: inline-block;
-    padding: 10px 15px;
-    background: #ecf0f1;
-    border: 1px solid #bdc3c7;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
+li {
+    background-image: url('star.png');
+    background-size: 50px;
+    background-repeat: no-repeat;
+    background-position: 100% 50%;
+    transition: all 0.5s ease;
+    padding: 1.5vw;
+    border-radius: 3vw;
 }
 
-p a:hover {
-    background: #1abc9c;
-    color: #fff;
-    border-color: #16a085;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-/* Page Layout */
-p {
-}
-
-h2 {
-}
-
-p + p {
-    margin-top: 10px;
+li:hover {
+    background-size: 600px;
+    background-position-x: 50%;
 }
